--- a/src/styles/_light-theme.scss
+++ b/src/styles/_light-theme.scss
@@ -176,7 +176,7 @@
     }
 
     &__search-input {
-      background: rgba(255, 255, 255, 0.75);
+      background: #ffffff;
       border-color: #e5e5f0;
       color: #1a1a24;
 
